month2_lesson8/manifests/app/app.ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: otus-ingress-month2-lesson8
  namespace: m
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1/$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: otus-svc-month2-lesson8
                port:
                  number: 7999
